fix layout bugs and update resume

--- a/src/assets/styles/components/imageSection.less
+++ b/src/assets/styles/components/imageSection.less
@@ -21,4 +21,14 @@
     height: 60%;
     margin-left: 45%;
   }
+
+  @media only screen and (max-height: 800px) { 
+    .image-title {
+      top: 40%;
+      left: 24%;
+    }
+    .design-img {
+      margin-left: 50%;
+    }
+  }
 }
