--- a/src/assets/styles/components/scrollBody.less
+++ b/src/assets/styles/components/scrollBody.less
@@ -8,7 +8,7 @@
   overflow-y: hidden;
   overflow-x: scroll;
   margin-left: 55px;
-  padding: 0 2rem;
+  padding: 0 0 0 2rem;
   display: flex;
   section {
     white-space: nowrap;
